feat: add retail shopping system and polish banking UI