@@ -17,8 +17,7 @@ import java.util.function.Consumer;
 
 public class MainMenuLayer extends AbstractScreenLayer {
 
-    private static final ResourceLocation ATM_BUTTONS = ResourceLocation.fromNamespaceAndPath(
-            "ultimatebankingsystem", "textures/gui/atm_buttons.png");
+    private static final ResourceLocation ATM_BUTTONS = ResourceLocation.fromNamespaceAndPath("ultimatebankingsystem", "textures/gui/atm_buttons.png");
 
     private final List<NineSliceTexturedButton> operationButtons = new ArrayList<>();
 
@@ -40,7 +39,7 @@ public class MainMenuLayer extends AbstractScreenLayer {
         List<AccountSummary> accounts = ClientATMData.getAccounts();
 
         if (accounts.size() == 1 && ClientATMData.getSelectedAccount() == null) {
-            ClientATMData.setSelectedAccount(accounts.getFirst());
+            ClientATMData.setSelectedAccount(accounts.get(0));
         }
 
         AccountSummary selectedAccount = ClientATMData.getSelectedAccount();
